--- a/src/main/resources/templates/list-employees.html
+++ b/src/main/resources/templates/list-employees.html
@@ -6,7 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h2 class="text-primary text-center ">Employees</h2>
+    <h2 class="text-primary text-center mt-3 mb-4">Employees</h2>
 <!--    <span th:text="${employees}"></span>-->
   <div class="container table-responsive">
     <table class="table table-bordered table-striped">
