--- a/src/main/resources/templates/list-employees.html
+++ b/src/main/resources/templates/list-employees.html
@@ -9,6 +9,11 @@
     <h2 class="text-primary text-center mt-3 mb-4">Employees</h2>
 <!--    <span th:text="${employees}"></span>-->
   <div class="container table-responsive">
+
+    <a th:href="@{/emploees/addNewEmployee}" class="btn btn-primary mb-2" >Add
+      New
+      Employee</a>
+
     <table class="table table-bordered table-striped">
       <thead class="table-dark">
         <tr>
