Add back button

--- a/src/main/resources/templates/new-employee-form.html
+++ b/src/main/resources/templates/new-employee-form.html
@@ -9,7 +9,7 @@
   <div class="container mt-5">
     <h3>New Employee</h3>
     <p>Add employee</p>
-    <for action="#" th:action="@{/employees/save}" th:object="${employee}"
+    <form action="#" th:action="@{/employees/save}" th:object="${employee}"
           method="post">
       <input type="text" th:field="*{lastName}" placeholder="Last Name"
              class="form-control mb-4 w-30" />
@@ -19,8 +19,10 @@
              class="form-control mb-4 w-30" />
 
       <button type="submit" class="btn btn-primary mb-3">Save</button>
+    </form>
 
-    </for>
+    <hr>
+    <a th:href="@{/employees/list}" class="btn btn-primary mb-3">Back</a>
   </div>
 </body>
 </html>
