Add save new employee

--- a/src/main/resources/templates/list-employees.html
+++ b/src/main/resources/templates/list-employees.html
@@ -10,9 +10,8 @@
 <!--    <span th:text="${employees}"></span>-->
   <div class="container table-responsive">
 
-    <a th:href="@{/emploees/addNewEmployee}" class="btn btn-primary mb-2" >Add
-      New
-      Employee</a>
+    <a th:href="@{/employees/addNewEmployee}" class="btn btn-primary mb-2" >Add
+      New Employee</a>
 
     <table class="table table-bordered table-striped">
       <thead class="table-dark">
@@ -37,5 +36,3 @@
   </div>
 </body>
 </html>
-
-// 101
