--- a/src/main/resources/templates/new-employee-form.html
+++ b/src/main/resources/templates/new-employee-form.html
@@ -11,6 +11,8 @@
     <p>Add employee</p>
     <form action="#" th:action="@{/employees/save}" th:object="${employee}"
           method="post">
+      <input type="hidden" th:field="*{id}" />
+
       <input type="text" th:field="*{lastName}" placeholder="Last Name"
              class="form-control mb-4 w-30" />
       <input type="text" th:field="*{firstName}" placeholder="First Name"
